# research-runtime

./: .gitignore  .gitmodules  README.md  VERSION  pyproject.toml  workflow.config.json
project/nn-architecture/: data.py  model.py  train.py
runtime/: CLAUDE.md
runtime/debates/: exp_0001_exploration.md  exp_0002_exploration.md  exp_0003_exploration.md  exp_0004_exploration.md  exp_0005_exploration.md  exp_0006_exploration.md  exp_0007_exploration.md
runtime/experiments/: best.json  exp_0001_exploration.json  exp_0002_exploration.json  exp_0003_exploration.json  exp_0004_exploration.json  exp_0005_exploration.json  exp_0006_exploration.json
runtime/history/: timeline.json
runtime/knowledge/: learned_patterns.md  rejected_ideas.md
runtime/objective/: objective.yaml
runtime/state/: current_iteration.json  state.json  val_loss.json
runtime/training/: entrypoint.yaml
scripts/: apply_agentteam_plan.py  apply_demo_model_change.py  apply_f1_review.py  bootstrap.sh  check_stop_conditions.sh  commit_runtime.sh  doctor.sh  list_experiments.sh  reset_current_iteration.sh  reset_runtime.sh  run_loop.sh  run_one_cycle.sh  schema_contract.py  set_phase.sh  show_phase.sh  status.sh  sync_from_workflow.sh  update_submodules.sh  validate_runtime.sh  validate_schema.sh
scripts/phases/: phase_a_history.sh  phase_b_exploration.sh  phase_c_local_validation.sh  phase_d_remote_launch.sh  phase_e_monitoring.sh  phase_f_checkpoint.sh
