[project]
name = "autoresearch-runtime"
version = "0.1.0"
description = "Runtime workspace for oh-my-autoresearch"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]
