[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# 宿主仓库(research-runtime)只用此文件管理依赖,本身不是可发布的包。
# package = false 让 uv 只安装 [project].dependencies,不把宿主目录当成包来构建
# (否则 setuptools 会在 flat-layout 里发现 runtime/、project/ 多个顶层包而报错)。
[tool.uv]
package = false

[project]
name = "research-loop-agent"
version = "0.1.0"
description = "Claude Code research loop agent submodule for automated neural architecture research"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "jsonschema>=4.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint]
ignore = ["E501"]
